# drip

./: Cargo.toml  Dioxus.toml  android.go  android_utility.java  app.go  bridge_android.go  bridge_desktop.go  build.sh  go.mod  go.sum  main.go  package-lock.json  readme.md  settings.go  todo  ui.go  wails.json  widgets.go
drip-app/: Cargo.toml  readme.md
drip-app/assets/: main.css
drip-app/src/: main.rs
drip-net/: Cargo.toml  protocol.txt
drip-net/src/: lib.rs  main.rs  mdns.rs  p2p.rs  peer.rs  webrtc.rs
frontend/: index.html  package-lock.json  package.json  package.json.md5
frontend/src/: App.jsx  Error.jsx  Files.jsx  Selection.jsx  Settings.jsx  Share.jsx  State.jsx  StateProvider.jsx  Transfer.jsx  TransferRequest.jsx  TransferSelection.jsx  constants.js  main.jsx  sender.js  style-copy.css  style.css
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
native_android/: settings.gradle
native_android/app/: build.gradle
native_android/app/src/main/: AndroidManifest.xml
native_android/app/src/main/java/com/aabiji/drip/: android_utility.java
p2p/: device.go  discovery.go  downloader.go  file.go  finder.go  go.mod  go.sum  medium.go  message.go  node.go  peer.go  protocol.txt  sender.go  syncer.go  tcp.go  transfer.go  types.go  utils.go
src/: main.rs
src/backend/: mod.rs
src/net/: discovery.rs
