[package]
name = "drip-app"
version = "0.1.0"
authors = ["Abigail Adegbiji <adegbijiabigail@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
