[package]
name = "drip-net"
version = "0.1.0"
authors = ["Abigail Adegbiji <adegbijiabigail@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1.10.1"
local-ip-address = "0.6.5"
mdns-sd = "0.13.10"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
webrtc = "0.13.0"
whoami = "1.6.0"

[lib]
path = "src/lib.rs"
